// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given connected and no metadata, when rendering, then show account, no connect button, no node info, tokenization 1`] = `
<Shell>
  <h1>
    You are ready to use the Logion wallet, congratulations!
  </h1>
  <p>
    The following accounts were detected:
  </p>
  <ul>
    <li>
      address
       (
      Account name
      )
    </li>
  </ul>
  <p>
    You are currently 
    connected
  </p>
  <UserContextProvider
    legalOfficerAddress="5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY"
    userAddress="address"
  >
    <Tokenization />
    <RejectedTokenizationRequests />
  </UserContextProvider>
</Shell>
`;

exports[`Given connected, when rendering, then show account, no connect button and tokenization 1`] = `
<Shell>
  <h1>
    You are ready to use the Logion wallet, congratulations!
  </h1>
  <p>
    The following accounts were detected:
  </p>
  <ul>
    <li>
      address
       (
      Account name
      )
    </li>
  </ul>
  <p>
    You are currently 
    connected to node "Node name" (Peer ID: Node peer ID)
  </p>
  <UserContextProvider
    legalOfficerAddress="5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY"
    userAddress="address"
  >
    <Tokenization />
    <RejectedTokenizationRequests />
  </UserContextProvider>
</Shell>
`;

exports[`Given connecting, when rendering, then show account, no button, no node info 1`] = `
<Shell>
  <h1>
    You are ready to use the Logion wallet, congratulations!
  </h1>
  <p>
    The following accounts were detected:
  </p>
  <ul>
    <li>
      address
       (
      Account name
      )
    </li>
  </ul>
  <p>
    You are currently 
    connecting
  </p>
</Shell>
`;

exports[`Given connection error, when rendering, then show account, no button, no node info 1`] = `
<Shell>
  <h1>
    You are ready to use the Logion wallet, congratulations!
  </h1>
  <p>
    The following accounts were detected:
  </p>
  <ul>
    <li>
      address
       (
      Account name
      )
    </li>
  </ul>
  <p>
    You are currently 
    disconnected (error)
  </p>
</Shell>
`;

exports[`Given disconnected, when rendering, then show disconnected and connect button 1`] = `
<Shell>
  <h1>
    You are ready to use the Logion wallet, congratulations!
  </h1>
  <p>
    The following accounts were detected:
  </p>
  <ul>
    <li>
      address
       (
      name
      )
    </li>
  </ul>
  <p>
    You are currently 
    disconnected
  </p>
  <Button
    active={false}
    disabled={false}
    variant="primary"
  >
    Connect
  </Button>
</Shell>
`;

exports[`Given no injected account, when rendering, then nothing displayed 1`] = `null`;
